@@ -8,6 +8,10 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
   Added treemap view of package and subroutine times, with drill-down.
 
+  Added sysops=1 option which enables profiling of perl opcodes
+    that make potentially slow system calls.
+XXX needs docs and more ops
+
 =head2 Changes in Devel::NYTProf 2.10 (svn r774) 18th June 2009
 
   Fixed call count for XSubs that was one too high.
